--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -214,9 +214,9 @@
                                 <h:panelGroup layout="block" styleClass="contenedor-padre-activity" rendered="#{empty alumnoControlador.tareaActividadModelo.respuesta}">
                                     <h:panelGroup layout="block" styleClass="uk-sortable contenedor-respuesta" pt:uk-sortable="group: respuesta"/>
                                 </h:panelGroup>
-                                <div class="trancript-contenedor arrastrar scroll-drag uk-text-justify remplazar">
+                                <div class="trancript-contenedor arrastrar scroll-drag uk-text-justify remplazar" data-respuesta="#{empty alumnoControlador.tareaActividadModelo.respuesta}">
                                     <h:outputText value="#{actividadAlumnoControlador.transcripcion}" escape="false" rendered="#{empty alumnoControlador.tareaActividadModelo.respuesta}"/>
-                                    <h:outputText value="#{alumnoControlador.tareaActividadModelo.respuesta}" escape="false" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}"/>
+                                    <f:verbatim escape="false">#{alumnoControlador.tareaActividadModelo.respuesta}</f:verbatim>
                                     <h:outputText styleClass="realizado movimiento1" value="Respondido" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}"/>
                                 </div>
                             </h:panelGroup>
