--- a/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
@@ -180,7 +180,8 @@
                                 <h:commandButton id="boton-enviar-mapa-mental" 
                                                  value="#{boton['submit']}"
                                                  rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                 action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                                 action="#{mapaMentalControlador.respondeMapaMental}"
+                                                 styleClass="boton-enviar"/>
                             </div>
                         </h:form>
                     </div>
