--- a/tecolotl-web/src/main/webapp/alumno/mindmap/10.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/10.xhtml
@@ -179,7 +179,8 @@
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
                                          value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                         action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                         action="#{mapaMentalControlador.respondeMapaMental}"
+                                         styleClass="boton-enviar"/>
                     </h:panelGroup>
                 </h:form>
             </div>
