--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -178,7 +178,8 @@
                                 <h:commandButton id="boton-enviar-mapa-mental-movil"
                                                  value="#{boton['submit']}"
                                                  rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                 action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                                 action="#{mapaMentalControlador.respondeMapaMental}"
+                                                 styleClass="boton-enviar"/>
                             </div>
                         </h:form>
                     </div>
