--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -124,7 +124,8 @@
                         <h:commandButton id="boton-enviar-mapa-mental-escritorio"
                                      value="#{boton['submit']}"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                     action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                     action="#{mapaMentalControlador.respondeMapaMental}"
+                                     styleClass="boton-enviar"/>
                     </div>
                 </h:form>
                 <h:form id="formulario-mapa-mental-movil">
