--- a/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
@@ -141,9 +141,10 @@
                             </h:inputTextarea>
                             <h:message for="Conclusion" styleClass=""/>
                             <h:commandButton id="boton-enviar-mapa-mental-escritorio"
-                                             value="Send"
+                                             value="enviar"
                                              rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                             action="#{mapaMentalControlador.respondeMapaMental}"
+                                             styleClass="boton-enviar"/>
                         </div>
                     </h:form>
                 </div>
